--- a/movie_api/movies/config.yaml
+++ b/movie_api/movies/config.yaml
@@ -1,6 +1,6 @@
 database:
   host: localhost
   port: 5432
-  username: postgres
-  password: test123
+  username: movies_user
+  password: M0vies.123
   databaseName: movies
